--- a/package-build-iGOS/vyos-1x/package.toml
+++ b/package-build-iGOS/vyos-1x/package.toml
@@ -1,5 +1,5 @@
 [[packages]]
 name = "vyos-1x"
 commit_id = "current"
-scm_url = "https://github.com/johnlfeeney/vyos-1x.git"
+scm_url = "https://github.com/psleng/vyos-1x.git"
 build_cmd = "dpkg-buildpackage -uc -us -tc -b"
