--- a/builds.toml
+++ b/builds.toml
@@ -2,33 +2,127 @@
 
 # Builds for GitHub Actions
 builds = [
-    "am62x_bookworm-no-km_09.00.00.006",
-    "am62x-lp_bookworm-no-km_09.00.00.006",
-    "am64x_bookworm_09.00.00.006",
+    "trixie-am62pxx-evm",
+    "trixie-rt-am62pxx-evm",
+    "trixie-am62xx-evm",
+    "trixie-rt-am62xx-evm",
+    "trixie-am62xx-lp-evm",
+    "trixie-rt-am62xx-lp-evm",
+    "trixie-am62xxsip-evm",
+    "trixie-rt-am62xxsip-evm",
+    "trixie-am64xx-evm",
+    "trixie-rt-am64xx-evm",
+    "bookworm-am62pxx-evm",
+    "bookworm-rt-am62pxx-evm",
+    "bookworm-am62xx-evm",
+    "bookworm-rt-am62xx-evm",
+    "bookworm-am62xx-lp-evm",
+    "bookworm-rt-am62xx-lp-evm",
+    "bookworm-am62xxsip-evm",
+    "bookworm-rt-am62xxsip-evm",
+    "bookworm-am64xx-evm",
+    "bookworm-rt-am64xx-evm",
 ]
 
-# List of all valid builds
-[am62x_bookworm-no-km_09.00.00.006]
+# List of all valid trixie builds
+[trixie-am62pxx-evm]
+    machine = "am62pxx-evm"
+    distro_codename = "trixie"
+    rt_linux = "false"
+
+[trixie-rt-am62pxx-evm]
+    machine = "am62pxx-evm"
+    distro_codename = "trixie"
+    rt_linux = "true"
+
+[trixie-am62xx-evm]
     machine = "am62xx-evm"
-    bsp_version = "09.00.00.006"
-    distro_variant = "bookworm-default-no-km"
+    distro_codename = "trixie"
+    rt_linux = "false"
 
-[am62x-lp_bookworm-no-km_09.00.00.006]
-    machine = "am62xx-lp-evm"
-    bsp_version = "09.00.00.006"
-    distro_variant = "bookworm-default-no-km"
-
-[am62x_bookworm_09.00.00.006]
+[trixie-rt-am62xx-evm]
     machine = "am62xx-evm"
-    bsp_version = "09.00.00.006"
-    distro_variant = "bookworm-default"
+    distro_codename = "trixie"
+    rt_linux = "true"
 
-[am62x-lp_bookworm_09.00.00.006]
+[trixie-am62xx-lp-evm]
     machine = "am62xx-lp-evm"
-    bsp_version = "09.00.00.006"
-    distro_variant = "bookworm-default"
+    distro_codename = "trixie"
+    rt_linux = "false"
 
-[am64x_bookworm_09.00.00.006]
+[trixie-rt-am62xx-lp-evm]
+    machine = "am62xx-lp-evm"
+    distro_codename = "trixie"
+    rt_linux = "true"
+
+[trixie-am62xxsip-evm]
+    machine = "am62xxsip-evm"
+    distro_codename = "trixie"
+    rt_linux = "false"
+
+[trixie-rt-am62xxsip-evm]
+    machine = "am62xxsip-evm"
+    distro_codename = "trixie"
+    rt_linux = "true"
+
+[trixie-am64xx-evm]
     machine = "am64xx-evm"
-    bsp_version = "09.00.00.006"
-    distro_variant = "bookworm-am64x"
+    distro_codename = "trixie"
+    rt_linux = "false"
+
+[trixie-rt-am64xx-evm]
+    machine = "am64xx-evm"
+    distro_codename = "trixie"
+    rt_linux = "true"
+
+# List of all valid bookworm builds
+[bookworm-am62pxx-evm]
+    machine = "am62pxx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "false"
+
+[bookworm-rt-am62pxx-evm]
+    machine = "am62pxx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "true"
+
+[bookworm-am62xx-evm]
+    machine = "am62xx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "false"
+
+[bookworm-rt-am62xx-evm]
+    machine = "am62xx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "true"
+
+[bookworm-am62xx-lp-evm]
+    machine = "am62xx-lp-evm"
+    distro_codename = "bookworm"
+    rt_linux = "false"
+
+[bookworm-rt-am62xx-lp-evm]
+    machine = "am62xx-lp-evm"
+    distro_codename = "bookworm"
+    rt_linux = "true"
+
+[bookworm-am62xxsip-evm]
+    machine = "am62xxsip-evm"
+    distro_codename = "bookworm"
+    rt_linux = "false"
+
+[bookworm-rt-am62xxsip-evm]
+    machine = "am62xxsip-evm"
+    distro_codename = "bookworm"
+    rt_linux = "true"
+
+[bookworm-am64xx-evm]
+    machine = "am64xx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "false"
+
+[bookworm-rt-am64xx-evm]
+    machine = "am64xx-evm"
+    distro_codename = "bookworm"
+    rt_linux = "true"
+
