--- a/configs/bsp_sources.toml
+++ b/configs/bsp_sources.toml
@@ -1,22 +1,20 @@
-[09.00.00.006]
-    kernel_major_version = 6
-    uboot_method = "k3ig"
-    atf_srcrev = "2fcd408bb3a6756767a43c073c597cef06e7f2d5"
-    optee_srcrev = "8e74d47616a20eaa23ca692f4bbbf917a236ed94"
-    uboot_srcrev = "09.00.00.006"
-    k3ig_srcrev = "09.00.00.006"
-    linux_fw_srcrev = "09.00.00.006"
-    linux_kernel_srcrev = "09.00.00.006"
-    img_rogue_driver_srcrev = "linuxws/kirkstone/k6.1/23.1.6404501"
+# BSP selection based on variant of filesystem
+[trixie]
+    bsp_version = "10.01.08.02"
 
-[08.06.00.007]
-    kernel_major_version = 5
-    uboot_method = "k3ig"
-    atf_srcrev = "2fcd408bb3a6756767a43c073c597cef06e7f2d5"
-    optee_srcrev = "8e74d47616a20eaa23ca692f4bbbf917a236ed94"
-    uboot_srcrev = "08.06.00.007"
-    k3ig_srcrev = "08.06.00.007"
-    linux_fw_srcrev = "08.06.00.007"
-    linux_kernel_srcrev = "08.06.00.007"
-    img_rogue_driver_srcrev = "linuxws/dunfell/k5.10/1.15.6133109_unified_fw_pagesize"
+[bookworm]
+    bsp_version = "09.02.00.010"
+
+# BSP Configurations
+[10.01.08.02]
+    atf_srcrev = "58b25570c9ef91753b14c2103f45f4be9dddb696"
+    optee_srcrev = "8f645256efc0dc66bd5c118778b0b50c44469ae1"
+    uboot_srcrev = "10.01.08"
+    linux_fw_srcrev = "10.01.08"
+
+[09.02.00.010]
+    atf_srcrev = "00f1ec6b8740ccd403e641131e294aabacf2a48b"
+    optee_srcrev = "012cdca49db398693903e05c42a254a3a0c0d8f2"
+    uboot_srcrev = "09.02.00.010"
+    linux_fw_srcrev = "09.02.00.010"
 
