--- a/Dockerfilearm64
+++ b/Dockerfilearm64
@@ -62,7 +62,9 @@ RUN apt-get update && apt-get install -y \
 RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && locale-gen
 ENV LANG=en_US.utf8
 
+
 ENV OCAML_VERSION=4.14.2
+RUN echo "export OCAML_VERSION=${OCAML_VERSION}" >> /etc/bash.bashrc
 
 # Base packaged needed to build packages and their package dependencies
 RUN apt-get update && apt-get install -y \
@@ -137,7 +139,7 @@ RUN dpkg-reconfigure ca-certificates; \
 # Installing OCAML needed to compile libvyosconfig
 RUN curl https://raw.githubusercontent.com/ocaml/opam/master/shell/install.sh \
       --output /tmp/opam_install.sh --retry 10 --retry-delay 5 && \
-    sed -i 's/read BINDIR/BINDIR=""/' /tmp/opam_install.sh && sh /tmp/opam_install.sh && \
+    sed -i 's/read -r BINDIR/BINDIR=""/' /tmp/opam_install.sh && sh /tmp/opam_install.sh && \
     opam init --root=/opt/opam --comp=${OCAML_VERSION} --disable-sandboxing --no-setup
 
 RUN eval $(opam env --root=/opt/opam --set-root) && \
@@ -153,10 +155,6 @@ RUN eval $(opam env --root=/opt/opam --set-root) && opam install -y \
       fileutils \
       xml-light
 
-# Build VyConf which is required to build libvyosconfig
-RUN eval $(opam env --root=/opt/opam --set-root) && \
-    opam pin add vyos1x-config https://github.com/vyos/vyos1x-config.git#d7260e772e39bc6a3a2d76d629567e03bbad16b5 -y
-
 # Packages needed for libvyosconfig
 RUN apt-get update && apt-get install -y \
       quilt \
@@ -166,7 +164,7 @@ RUN apt-get update && apt-get install -y \
 # Build libvyosconfig
 RUN eval $(opam env --root=/opt/opam --set-root) && \
     git clone https://github.com/vyos/libvyosconfig.git /tmp/libvyosconfig && \
-    cd /tmp/libvyosconfig && git checkout 9e4f6c1494fcff64ad22503b704dbdd43347b0a6 && \
+    cd /tmp/libvyosconfig && git checkout e4bfbf0147f4242b0999a3305fd9a496b49b2caf && \
     dpkg-buildpackage -uc -us -tc -b && \
     dpkg -i /tmp/libvyosconfig0_*_$(dpkg-architecture -qDEB_HOST_ARCH).deb
 
@@ -241,7 +239,7 @@ RUN gem install --no-document fpm
 # Packages needed for vyos-1x
 RUN pip install --break-system-packages \
       git+https://github.com/aristanetworks/j2lint.git@341b5d5db86 \
-      pyhumps==3.8.0 && \
+      pyhumps==3.8.0; \
     apt-get update && apt-get install -y \
       dh-python \
       fakeroot \
@@ -434,7 +432,7 @@ RUN apt-get update && apt-get install -y \
 # Packages needed for failed make of Vyos - JF
 RUN apt-get update && apt-get install -y \
 	kpartx
-	
+
 # Packages needed for frr - JF
 # DK	libsnmp-dev removed, it  will be installed when net-snmp is installed BEFORE frr is built - order dependency
 # And for building libyan2-dev https://docs.frrouting.org/projects/dev-guide/en/latest/building-frr-for-debian12.html#install-required-packages -JF
@@ -488,9 +486,12 @@ RUN apt-get update && apt-get install -y \
 RUN pip install --break-system-packages \
 	toml-cli \
 	yamllint
-# Environment variables needed - JF
+
+      # Environment variables needed - JF
 ENV DEBEMAIL="psleng@perle.com"
+RUN echo "DEBEMAIL=${DEBEMAIL}" >> /etc/bash.bashrc
 ENV EMAIL="psleng@perle.com"
+RUN echo "export EMAIL=${EMAIL}" >> /etc/bash.bashrc
 
 # Packages needed for nftables
 RUN apt-get update && apt-get install -y \
