--- a/package-build-iGOS/libvyosconfig/package.toml
+++ b/package-build-iGOS/libvyosconfig/package.toml
@@ -1,6 +1,6 @@
 [[packages]]
 name = "libvyosconfig"
-commit_id = "master"
+commit_id = "current"
 scm_url = "https://github.com/psleng/libvyosconfig"
 build_cmd = "eval $(opam env --root=/opt/opam --set-root); dpkg-buildpackage -uc -us -tc -b"
 
