--- a/am64x.env
+++ b/am64x.env
@@ -20,7 +20,7 @@ findfdt=
 name_kern=Image
 console=ttyS2,115200n8
 args_all=setenv optargs earlycon=ns16550a,mmio32,0x02800000 ${mtdparts}
-run_kern=booti ${loadaddr} ${rd_spec} ${fdtaddr}
+# run_kern=booti ${loadaddr} ${rd_spec} ${fdtaddr}
 
 boot=mmc
 mmcdev=1
@@ -58,7 +58,7 @@ usbboot=setenv boot usb;
 	run run_kern;
 
 ## Add SquashFS boot commands
-squashfsboot=setenv boot mmc; setenv bootpart 1:1; run findfdt; run args_all; sqfsload mmc ${mmcdev}:${bootpart} ${loadaddr} ${bootdir}/${name_kern}; sqfsload mmc ${mmcdev}:${bootpart} ${fdtaddr} ${bootdir}/${name_fdt}; booti ${loadaddr} ${rd_spec} ${fdtaddr}
+squashfsboot=setenv boot mmc; setenv bootpart 1:2; run findfdt; run args_all; sqfsload mmc ${mmcdev}:${bootpart} ${loadaddr} ${bootdir}/${name_kern}; sqfsload mmc ${mmcdev}:${bootpart} ${fdtaddr} ${bootdir}/${name_fdt}; sqfsload mmc ${mmcdev}:${bootpart} ${loadaddr} ${bootdir}/filesystem.squashfs; booti ${loadaddr} ${rd_spec} ${fdtaddr}
 
 ## Override the default bootcmd
 setenv bootcmd 'run squashfsboot'
